Permissions are now correctly assigned to the user or seller according to the respected roles they have. Duplicates are avoided